--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tauri-tanstack-start-react-template",
   "private": true,
   "type": "module",
+  "packageManager": "pnpm@10.26.1",
   "scripts": {
     "dev": "vite dev --port 3000",
     "build": "vite build",
