--- a/.github/workflows/rust-test.yml
+++ b/.github/workflows/rust-test.yml
@@ -44,8 +44,6 @@ jobs:
           toolchain: stable
           cache: true
 
-      - name: Install just command runner
-        uses: extractions/setup-just@v3
-
       - name: Run tests
-        run: just test
+        run: cargo test --all --all-features
+        working-directory: src-tauri
