--- a/package.json
+++ b/package.json
@@ -2,17 +2,19 @@
   "name": "tauri-tanstack-start-react-template",
   "private": true,
   "type": "module",
-  "packageManager": "pnpm@10.26.1",
+  "packageManager": "pnpm@10.27.0",
   "scripts": {
-    "dev": "vite dev --port 3000",
-    "build": "vite build",
+    "dev:vite": "vite dev --port 3000",
+    "build:vite": "vite build",
     "preview": "vite preview",
     "test": "vitest run",
     "tauri": "tauri",
     "format": "biome format",
     "lint": "biome lint",
     "check": "biome check",
-    "fix": "biome check --write"
+    "fix": "biome check --write",
+    "dev": "pnpm tauri dev",
+    "build": "pnpm tauri build"
   },
   "dependencies": {
     "@fontsource-variable/geist": "^5.2.8",
