--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tauri-tanstack-start-react-template",
   "private": true,
   "type": "module",
-  "packageManager": "pnpm@10.27.0",
+  "packageManager": "pnpm@10.30.1",
   "scripts": {
     "dev:vite": "vite dev --port 3000",
     "build:vite": "vite build",
@@ -18,34 +18,34 @@
   "dependencies": {
     "@fontsource-variable/inter": "^5.2.8",
     "@fontsource-variable/jetbrains-mono": "^5.2.8",
-    "@tailwindcss/vite": "^4.1.18",
-    "@tanstack/react-devtools": "^0.9.4",
-    "@tanstack/react-router": "^1.158.0",
-    "@tanstack/react-router-devtools": "^1.158.0",
-    "@tanstack/react-router-ssr-query": "^1.158.0",
-    "@tanstack/react-start": "^1.158.0",
-    "@tanstack/router-plugin": "^1.158.0",
+    "@tailwindcss/vite": "^4.2.0",
+    "@tanstack/react-devtools": "^0.9.6",
+    "@tanstack/react-router": "^1.161.3",
+    "@tanstack/react-router-devtools": "^1.161.3",
+    "@tanstack/react-router-ssr-query": "^1.161.3",
+    "@tanstack/react-start": "^1.161.3",
+    "@tanstack/router-plugin": "^1.161.3",
     "@tauri-apps/api": "^2.10.1",
     "@tauri-apps/plugin-opener": "^2.5.3",
-    "nitro": "npm:nitro-nightly@3.0.1-20251230-165713-6e801e22",
+    "nitro": "3.0.1-alpha.2",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "tailwindcss": "^4.1.18",
-    "vite-tsconfig-paths": "^6.0.5"
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.3.14",
-    "@tanstack/devtools-vite": "^0.5.0",
+    "@biomejs/biome": "^2.4.4",
+    "@tanstack/devtools-vite": "^0.5.1",
     "@tauri-apps/cli": "^2.10.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/react": "^16.3.2",
-    "@types/node": "^25.2.0",
-    "@types/react": "^19.2.11",
+    "@types/node": "^25.3.0",
+    "@types/react": "^19.2.14",
     "@types/react-dom": "^19.2.3",
-    "@vitejs/plugin-react": "^5.1.3",
-    "jsdom": "^28.0.0",
+    "@vitejs/plugin-react": "^5.1.4",
+    "jsdom": "^28.1.0",
     "typescript": "^5.9.3",
     "vite": "^7.3.1",
+    "vite-tsconfig-paths": "^6.1.1",
     "vitest": "^4.0.18",
     "web-vitals": "^5.1.0"
   }
